2001-01-07    <tntdevel@brokendreams.net>

	* tnt.el (tnt-send-pounce): Made null "" messages send a "user is now
	available" message to their buffer.
	(tnt-pounce-add): Made null "" messages remain null, rather than being
	sent as "none".

2001-01-03    <tntdevel@brokendreams.net>

	* tnt.el (tnt-set-buddy-status): Added a call to tnt-send-pounce to
	fix up the pounce code.
	(tnt-pounce-add): Added a call to toc-normalize when reading in from 
	the minibuffer.

2001-01-02  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-login-flag-unset-after): now defaulting to 10 rather
	than 3, since login seems to take a little longer.  this means
	that it will less often happen that after logging in, all your
	buddies appear with the "just logged on" message.
	(tnt-version): incremented version to 2.3.2

2001-01-02  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-handle-sign-on): removed call to toc-init-done
	* tnt.el (tnt-handle-config): added call to toc-init-done

2000-12-01    <tntdevel@brokendreams.net>

	* tocstr.el (tnt-timers-available): Changed the calls of 
	string-as-unibyte to an if statement checking whether or not 
	the function is bound.
	(tnt-string-as-unibyte-available): Added.
	(tnt-timers-available): Moved things around, now tocstr looks for
	tnt-string-as-unibyte-available before defining.. shoudl solve 
	our problems)

2000-14-07    <tntdevel@brokendreams.net>

	* tnt.el: Changed minor version number.  Now version 2.3

2000-11-07    <tntdevel@brokendreams.net>

	* tocstr.el (tnt-timers-available): Changed occurances of 
	string-make-unibyte to string-as-unibyte.  This should solve
	the compat problems.

2000-11-06    <tntdevel@brokendreams.net>

	* tocstr.el: (tocstr-init-receiver): the logic here was reversed and 
	has been fixed to reflect the proper logic.  This should compile
	now.

2000-11-06  Jim Whitehead  <tntdevel@sourceforge.net>

	* tocstr.el (tocstr-filet): changed the definitions to reflect
	the proper them-else